linux-kernel-di-amd64-2.6 (0.17) UNRELEASED; urgency=low

  * Added crc-ccitt.o driver to kernel-image since two udeb packages need it
    now.

 -- Frederik Schüler <fschueler@gmx.net>  Sun, 19 Dec 2004 19:35:40 +0100

linux-kernel-di-amd64-2.6 (0.16) unstable; urgency=low

  * Rebuilt with kernel-image-2.6.8-9-amd64-generic.

 -- Frederik Schüler <fschueler@gmx.net>  Mon,  4 Oct 2004 21:36:42 +0200

linux-kernel-di-amd64-2.6 (0.15) unstable; urgency=low

  * Rebuilt with kernel-image-2.6.8-4-amd64-generic.

 -- Frederik Schüler <fschueler@gmx.net>  Mon, 20 Sep 2004 21:40:56 +0200

linux-kernel-di-amd64-2.6 (0.14) unstable; urgency=low

  * Frederik Schüler
    - Rebuild with kernel-image-2.6.8-3-amd64-generic
    - Updated package.list to match the i386-2.6 one: added nic-extra-modules
      dependencies
    - Removed sx8 module from scsi-extra-modules, it is provided by
      sata-modules now
    - Added acpi-modules udeb
    - Build-depend on kernel-wedge (>= 1.22) to make sure sata_nv is available

 -- Frederik Schüler <fschueler@gmx.net>  Tue, 31 Aug 2004 13:03:24 +0200

linux-kernel-di-amd64-2.6 (0.13) unstable; urgency=low

  * Added 3w-9xxx driver to scsi-extra-modules 

 -- Frederik Schüler <fschueler@gmx.net>  Wed, 18 Aug 2004 11:36:20 +0200

linux-kernel-di-amd64-2.6 (0.12) unstable; urgency=low

  * Joey Hess
    - Move eth1394 to the nic-modules from firewire-core-modules, so we can
      avoid putting it on initrds that lack other nic drivers, which caused
      the firewire interface to be brought up too early and in the wrong order.
      nic-modules now depends on firewire-core-modules. This is a quick fix,
      so it wasn't changed in kernel-wedge.
  * Frederik Schüler
    - Removed lanstreamer and advansys modules
    - New drivers: sata_nv, sx8 and via-velocity
    - Rebuild with kernel-image-2.6.8-1-amd64-generic

 -- Frederik Schüler <fschueler@gmx.net>  Tue, 17 Aug 2004 00:23:06 +0200

linux-kernel-di-amd64-2.6 (0.11) unstable; urgency=low
