@@ -1,2 +1,2 @@
 # arch   version  flavour       installedname          suffix	build-depends
-amd64    2.6.8-9  amd64-generic 2.6.8-9-amd64-generic  -			kernel-image-2.6.8-9-amd64-generic
+amd64	 2.6.8-9  amd64-generic 2.6.8-9-amd64-generic  -	kernel-image-2.6.8-9-amd64-generic
