@@ -2,8 +2,9 @@ linux-kernel-di-amd64-2.6 (0.17) UNRELEASED; urgency=low
 
   * Added crc-ccitt.o driver to kernel-image since two udeb packages need it
     now.
+  * Patch debian/rules for multiarch support.
 
- -- Frederik Schüler <fschueler@gmx.net>  Sun, 19 Dec 2004 19:35:40 +0100
+ -- Frederik Schüler <fschueler@gmx.net>  Sun, 19 Dec 2004 19:43:33 +0100
 
 linux-kernel-di-amd64-2.6 (0.16) unstable; urgency=low
 
